--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="container py-4">
         <div class="d-flex justify-content-between align-items-center mb-4 flex-wrap">
-            <h1 class="h3 mb-3 mb-md-0">Atlas Build</h1>
+            <h1 class="h3 mb-3 mb-md-0 text-center">Atlas Build</h1>
         </div>
 
         <div class="card shadow-sm">
@@ -45,11 +45,11 @@
                     <tbody>
                         <tr>
                             <td>1</td>
-                            <td> 1.0.36</td>
-                            <td> 8 May 2025</td>
+                            <td>1.0.37</td>
+                            <td>8 May 2025</td>
                             <td>Geo tagging release</td>
                             <td>
-                                <a href="https://dropbuild.s3.ap-south-1.amazonaws.com/builds/2_9_103_18.apk" class="btn btn-primary btn-sm me-2" target="_blank">Download for Android</a>
+                                <a href="builds/1_0_37.apk" class="btn btn-primary btn-sm me-2" target="_blank">Download for Android</a>
                                 <a href="itms-services://?action=download-manifest&url=manifest/manifest.plist" class="btn btn-success btn-sm" target="_blank">Download for iOS</a>
                             </td>
                         </tr>
@@ -59,9 +59,5 @@
         </div>
         
     </div>
-
-    <!-- Bootstrap JS Bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
