--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <td>Geo tagging release</td>
                             <td>
                                 <a href="builds/1_0_37.apk" class="btn btn-primary btn-sm me-2" target="_blank">Download for Android</a>
-                                <a href="itms-services://?action=download-manifest&url=manifest/manifest.plist" class="btn btn-success btn-sm" target="_blank">Download for iOS</a>
+                                <a href="itms-services://?action=download-manifest&url=manifest.plist" class="btn btn-success btn-sm" target="_blank">Download for iOS</a>
                             </td>
                         </tr>
                     </tbody>
