--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                         </tr>
                     </tbody>
                 </table>
+                <a href="itms-services://?action=download-manifest&url=https://buyonline.life.futuregenerali.in/FGLMS/FgLmsApp.plist"
+                    class="button" id="text"> Install </a>
             </div>
         </div>
         
