--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
                         </tr>
                     </tbody>
                 </table>
-                <a href="itms-services://?action=download-manifest&url=https://buyonline.life.futuregenerali.in/FGLMS/FgLmsApp.plist"
-                    class="button" id="text"> Install </a>
+                <a href="itms-services://?action=download-manifest&url=FgLmsApp.plist"
+                    class="button" id="text"> Install New Version
+                </a>
             </div>
         </div>
         
