--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                         </tr>
                     </tbody>
                 </table>
-                <a href="itms-services://?action=download-manifest&url=FgLmsApp.plist"
-                    class="button" id="text"> Install New Version
+                <a href="itms-services://?action=download-manifest&url=./FgLmsApp.plist"
+                    class="button" id="text"> Install New Version 2
                 </a>
             </div>
         </div>
